# frappe-ws-medis

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CHANGELOG.md  README.md  babel_extractors.csv  cypress.config.js  package.json  pyproject.toml
.github/: stale.yml
.github/actions/setup/: action.yml
.github/helper/db/: postgres.json
.github/workflows/: _base-migration.yml  _base-server-tests.yml  _base-type-check.yml  _base-ui-tests.yml  backport.yml  create-release.yml  generate-pot-file.yml  label-base-on-title.yml  labeller.yml  linters.yml  lock.yml  on_release.yml  publish-assets-develop.yml  run-indinvidual-tests.yml  server-tests.yml  ui-tests.yml
cypress/integration/: awesome_bar.js  control_attach.js  control_data.js  control_dynamic_link.js  control_link.js  custom_buttons.js  customize_form.js  dashboard.js  dashboard_chart.js  dashboard_links.js  depends_on.js  file_uploader.js  form.js  form_builder.js  grid_pagination.js  grid_row_form_tabs.js  kanban.js  list_view.js  list_view_settings.js  number_card.js  report_view.js  sidebar.js  socket_updates.js  utils.js  view_routing.js  web_form.js  workspace_blocks.js
cypress/support/: commands.js
frappe/: __init__.py  app.py  apps.py  auth.py  boot.py  build.py  cache_manager.py  client.py  coverage.py  defaults.py  frappeclient.py  handler.py  hooks.py  installer.py  middlewares.py  migrate.py  patches.txt  permissions.py  sessions.py  share.py  test_runner.py  translate.py  twofactor.py
frappe/api/: __init__.py  v1.py  v2.py
frappe/automation/doctype/auto_repeat/: auto_repeat.js  auto_repeat.py
frappe/automation/doctype/milestone_tracker/: milestone_tracker.py
frappe/commands/: site.py  test_commands.py  testing.py  utils.py
frappe/contacts/doctype/address/: address.py
frappe/core/dashboard_chart/background_job_activity/: background_job_activity.json
frappe/core/doctype/audit_trail/: test_audit_trail.py
frappe/core/doctype/communication/: communication.py  email.py  mixins.py  test_communication.py
frappe/core/doctype/communication_link/: communication_link.json  communication_link.py
frappe/core/doctype/data_export/: exporter.py
frappe/core/doctype/data_import/: data_import.py  importer.py  test_importer.py
frappe/core/doctype/docfield/: docfield.json  docfield.py
frappe/core/doctype/doctype/: doctype.json  doctype.py  doctype_list.js  test_doctype.py
frappe/core/doctype/file/: file.py  test_file.py  utils.py
frappe/core/doctype/installed_applications/: installed_applications.py
frappe/core/doctype/log_settings/: log_settings.py
frappe/core/doctype/page/: page.py
frappe/core/doctype/permission_inspector/: permission_inspector.js  permission_inspector.py
frappe/core/doctype/permission_log/: permission_log.py
frappe/database/: database.py  query.py  schema.py  utils.py
frappe/database/mariadb/: database.py  mysqlclient.py  setup_db.py
frappe/database/postgres/: database.py  schema.py  setup_db.py
frappe/desk/: calendar.py  desktop.py  listview.py  notifications.py  query_report.py  reportview.py  search.py  treeview.py  utils.py
frappe/desk/form/: assign_to.py  linked_with.py  load.py  utils.py
frappe/desktop_icon/: automation.json  build.json  data.json  email.json  framework.json  frappe_framework.json  integrations.json  my_workspaces.json  printing.json  productivity.json  system.json  users.json  website.json
frappe/email/: __init__.py  email_body.py  frappemail.py  receive.py  smtp.py  test_smtp.py
frappe/fixtures/: permission_type.json
frappe/geo/: country_info.json  languages.csv  languages.json
frappe/integrations/: google_oauth.py  oauth2.py  offsite_backup_utils.py
frappe/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  vi.po  zh.po
frappe/model/: __init__.py  base_document.py  db_query.py  delete_doc.py  document.py  dynamic_links.py  meta.py  naming.py  qb_query.py  rename_doc.py  sync.py  workflow.py
frappe/model/utils/: user_settings.py
frappe/modules/: import_file.py  utils.py
frappe/patches/v16_0/: auto_generate_sidebar_from_modules.py
frappe/public/js/: billing.bundle.js  desk.bundle.js
frappe/pulse/: app_heartbeat_event.py  client.py  utils.py
frappe/query_builder/: functions.py
frappe/search/: __init__.py  sqlite_search.py
frappe/tests/: test_api.py  test_api_v2.py  test_auth.py  test_background_jobs.py  test_caching.py  test_client.py  test_commands.py  test_db.py  test_db_query.py  test_db_update.py  test_document.py  test_domainification.py  test_email.py  test_hooks.py  test_modules.py  test_naming.py  test_oauth20.py  test_patches.py  test_perf.py  test_permissions.py  test_query.py  test_query_report.py  test_search.py  test_sqlite_search.py  test_utils.py  test_website.py  ui_test_helpers.py
frappe/tests/classes/: integration_test_case.py
frappe/tests/utils/: __init__.py  generators.py
frappe/types/: filter.py
frappe/utils/: __init__.py  background_jobs.py  backups.py  boilerplate.py  change_log.py  connections.py  data.py  deprecations.py  error.py  goal.py  html_utils.py  identicon.py  install.py  messages.py  modules.py  nestedset.py  oauth.py  pdf.py  print_format.py  print_utils.py  response.py  safe_exec.py  synchronization.py  user.py  weasyprint.py
frappe/utils/pdf_generator/: browser.py  cdp_connection.py  chrome_pdf_generator.py  page.py
frappe/website/: path_resolver.py  utils.py  website_generator.py
frappe/website/page_renderers/: list_renderer.py  not_permitted_page.py  portal_renderer.py
frappe/workspace_sidebar/: automation.json  build.json  data.json  email.json  integrations.json  my_workspaces.json  printing.json  productivity.json  system.json  users.json  website.json
frappe/www/: desk.py  desktop.css  desktop.html  desktop.py  error.html  error.py  list.py  login.py  me.html  message.html  portal.html  portal.py  printview.py  qrcode.html
realtime/middlewares/: authenticate.js
(+231 files in other folders)
